--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,4 +1,7 @@
 {
   "promptDelete": false,
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "propertiesInDocument": "hidden",
+  "newFileLocation": "current",
+  "attachmentFolderPath": "Attachments"
 }
