--- a/.obsidian/plugins/links/manifest.json
+++ b/.obsidian/plugins/links/manifest.json
@@ -1,10 +1,1 @@
-{
-	"id": "links",
-	"name": "Links",
-	"version": "1.5.9",
-	"minAppVersion": "0.15.0",
-	"description": "Manipulate links",
-	"author": "MiiKey",
-	"authorUrl": "https://github.com/mii-key",
-	"isDesktopOnly": false
-}
+{"id":"links","name":"Links","version":"1.5.10","minAppVersion":"0.15.0","description":"Manipulate links","author":"MiiKey","authorUrl":"https://github.com/mii-key","isDesktopOnly":false}
